// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for Asynchronous 1`] = `
<section>
  <div
    class="lucid-SearchableMultiSelect"
    default=""
  >
    <div
      class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu"
    >
      <span
        class="lucid-ContextMenu"
      >
        <div
          class="lucid-DropMenu-Control"
          tabindex="0"
        >
          <div
            class="lucid-SearchField lucid-SearchableMultiSelect-search"
          >
            <input
              autocomplete="off"
              class="lucid-TextField lucid-TextField-is-single-line"
              placeholder="Type here to simulate an API backed search"
              rows="5"
              type="text"
              value=""
            />
            <div
              class="lucid-SearchField-Icon-container"
            >
              <svg
                class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                height="12"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="12"
              >
                <circle
                  cx="6"
                  cy="6"
                  r="5.5"
                />
                <path
                  d="M15.5 15.5L9.876 9.876"
                />
              </svg>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</section>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for CustomSelectionLabel 1`] = `
<div
  class="lucid-SearchableMultiSelect"
  default=""
>
  <div
    class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu"
  >
    <span
      class="lucid-ContextMenu"
    >
      <div
        class="lucid-DropMenu-Control"
        tabindex="0"
      >
        <div
          class="lucid-SearchField lucid-SearchableMultiSelect-search"
        >
          <input
            autocomplete="off"
            class="lucid-TextField lucid-TextField-is-single-line"
            rows="5"
            type="text"
            value=""
          />
          <div
            class="lucid-SearchField-Icon-container"
          >
            <svg
              class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
              height="12"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="12"
            >
              <circle
                cx="6"
                cy="6"
                r="5.5"
              />
              <path
                d="M15.5 15.5L9.876 9.876"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for Default 1`] = `
<div
  class="lucid-Resizer"
>
  <div
    class="lucid-SearchableMultiSelect"
    default=""
  >
    <div
      class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu"
    >
      <span
        class="lucid-ContextMenu"
      >
        <div
          class="lucid-DropMenu-Control"
          tabindex="0"
        >
          <div
            class="lucid-SearchField lucid-SearchableMultiSelect-search"
          >
            <input
              autocomplete="off"
              class="lucid-TextField lucid-TextField-is-single-line"
              rows="5"
              type="text"
              value=""
            />
            <div
              class="lucid-SearchField-Icon-container"
            >
              <svg
                class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                height="12"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="12"
              >
                <circle
                  cx="6"
                  cy="6"
                  r="5.5"
                />
                <path
                  d="M15.5 15.5L9.876 9.876"
                />
              </svg>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for FormattedOptions 1`] = `
<div
  class="lucid-SearchableMultiSelect"
  default=""
>
  <div
    class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu"
  >
    <span
      class="lucid-ContextMenu"
    >
      <div
        class="lucid-DropMenu-Control"
        tabindex="0"
      >
        <div
          class="lucid-SearchField lucid-SearchableMultiSelect-search"
        >
          <input
            autocomplete="off"
            class="lucid-TextField lucid-TextField-is-single-line"
            rows="5"
            type="text"
            value=""
          />
          <div
            class="lucid-SearchField-Icon-container"
          >
            <svg
              class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
              height="12"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="12"
            >
              <circle
                cx="6"
                cy="6"
                r="5.5"
              />
              <path
                d="M15.5 15.5L9.876 9.876"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for GroupedOptions 1`] = `
<div
  class="lucid-SearchableMultiSelect"
  default=""
  initialstate="[object Object]"
>
  <div
    class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu"
  >
    <span
      class="lucid-ContextMenu"
    >
      <div
        class="lucid-DropMenu-Control"
        tabindex="0"
      >
        <div
          class="lucid-SearchField lucid-SearchableMultiSelect-search"
        >
          <input
            autocomplete="off"
            class="lucid-TextField lucid-TextField-is-single-line"
            rows="5"
            type="text"
            value=""
          />
          <div
            class="lucid-SearchField-Icon-container"
          >
            <svg
              class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
              height="12"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="12"
            >
              <circle
                cx="6"
                cy="6"
                r="5.5"
              />
              <path
                d="M15.5 15.5L9.876 9.876"
              />
            </svg>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div
    class="lucid-SearchableMultiSelect-Selection-padding"
  >
    <div
      class="lucid-Selection lucid-Selection-is-large lucid-Selection-container lucid-Selection-has-background lucid-Selection-is-bold lucid-SearchableMultiSelect-Selection-section"
    >
      <div
        class="lucid-Selection-content"
      >
        <div
          class="lucid-Selection-label-container"
        >
          <span
            class="lucid-Selection-label"
          >
            Selected
          </span>
          <svg
            class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
            height="8"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="8"
          >
            <path
              d="M.5.5l15 15m0-15l-15 15"
            />
          </svg>
        </div>
        <div
          class="lucid-Selection-children-container"
        >
          <div
            class="lucid-Selection lucid-Selection-is-large lucid-Selection-container lucid-Selection-is-bold lucid-SearchableMultiSelect-Selection-group"
          >
            <div
              class="lucid-Selection-content"
            >
              <div
                class="lucid-Selection-label-container"
              >
                <span
                  class="lucid-Selection-label"
                >
                  Northeast
                </span>
              </div>
              <div
                class="lucid-Selection-children-container"
              >
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Connecticut
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Delaware
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Maine
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Maryland
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="lucid-Selection lucid-Selection-is-large lucid-Selection-container lucid-Selection-is-bold lucid-SearchableMultiSelect-Selection-group"
          >
            <div
              class="lucid-Selection-content"
            >
              <div
                class="lucid-Selection-label-container"
              >
                <span
                  class="lucid-Selection-label"
                >
                  Southeast
                </span>
              </div>
              <div
                class="lucid-Selection-children-container"
              >
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Alabama
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
                <div
                  class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
                >
                  <div
                    class="lucid-Selection-content"
                  >
                    <div
                      class="lucid-Selection-label-container"
                    >
                      <span
                        class="lucid-Selection-label"
                      >
                        Arkansas
                      </span>
                      <svg
                        class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                        height="8"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="8"
                      >
                        <path
                          d="M.5.5l15 15m0-15l-15 15"
                        />
                      </svg>
                    </div>
                    <div
                      class="lucid-Selection-children-container"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
          >
            <div
              class="lucid-Selection-content"
            >
              <div
                class="lucid-Selection-label-container"
              >
                <span
                  class="lucid-Selection-label"
                >
                  Alaska
                </span>
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                  height="8"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="8"
                >
                  <path
                    d="M.5.5l15 15m0-15l-15 15"
                  />
                </svg>
              </div>
              <div
                class="lucid-Selection-children-container"
              />
            </div>
          </div>
          <div
            class="lucid-Selection lucid-Selection-is-large lucid-Selection-default"
          >
            <div
              class="lucid-Selection-content"
            >
              <div
                class="lucid-Selection-label-container"
              >
                <span
                  class="lucid-Selection-label"
                >
                  Hawaii
                </span>
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button"
                  height="8"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="8"
                >
                  <path
                    d="M.5.5l15 15m0-15l-15 15"
                  />
                </svg>
              </div>
              <div
                class="lucid-Selection-children-container"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for Invalid 1`] = `
<div
  class="lucid-Resizer"
>
  <div
    class="lucid-SearchableMultiSelect"
    default=""
  >
    <div
      class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
    >
      <span
        class="lucid-ContextMenu"
      >
        <div
          class="lucid-DropMenu-Control"
          tabindex="0"
        >
          <div
            class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small lucid-SearchableMultiSelect-search-is-error"
          >
            <input
              autocomplete="off"
              class="lucid-TextField lucid-TextField-is-single-line"
              rows="5"
              type="text"
              value=""
            />
            <div
              class="lucid-SearchField-Icon-container"
            >
              <svg
                class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                height="12"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="12"
              >
                <circle
                  cx="6"
                  cy="6"
                  r="5.5"
                />
                <path
                  d="M15.5 15.5L9.876 9.876"
                />
              </svg>
            </div>
          </div>
        </div>
      </span>
    </div>
    <div
      class="lucid-SearchableMultiSelect-error-content"
    >
      Please select at least two options
    </div>
  </div>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for Props 1`] = `
<div
  class="lucid-Resizer"
>
  <section>
    <h5>
      Loading
    </h5>
    <div
      class="lucid-SearchableMultiSelect"
      default=""
    >
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
            tabindex="0"
          >
            <div
              class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small"
            >
              <input
                autocomplete="off"
                class="lucid-TextField lucid-TextField-is-single-line"
                rows="5"
                type="text"
                value=""
              />
              <div
                class="lucid-SearchField-Icon-container"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                  height="12"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <circle
                    cx="6"
                    cy="6"
                    r="5.5"
                  />
                  <path
                    d="M15.5 15.5L9.876 9.876"
                  />
                </svg>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <h5>
      Disabled
    </h5>
    <div
      class="lucid-SearchableMultiSelect"
      default=""
    >
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
          >
            <div
              class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small"
            >
              <input
                autocomplete="off"
                class="lucid-TextField lucid-TextField-is-disabled lucid-TextField-is-single-line"
                disabled=""
                rows="5"
                type="text"
                value=""
              />
              <div
                class="lucid-SearchField-Icon-container lucid-SearchField-Icon-is-disabled"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                  height="12"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <circle
                    cx="6"
                    cy="6"
                    r="5.5"
                  />
                  <path
                    d="M15.5 15.5L9.876 9.876"
                  />
                </svg>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <h5>
      Custom option selections
    </h5>
    <div
      class="lucid-SearchableMultiSelect"
      default=""
    >
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
            tabindex="0"
          >
            <div
              class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small"
            >
              <input
                autocomplete="off"
                class="lucid-TextField lucid-TextField-is-single-line"
                rows="5"
                type="text"
                value=""
              />
              <div
                class="lucid-SearchField-Icon-container"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                  height="12"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <circle
                    cx="6"
                    cy="6"
                    r="5.5"
                  />
                  <path
                    d="M15.5 15.5L9.876 9.876"
                  />
                </svg>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div
        class="lucid-SearchableMultiSelect-Selection-padding"
      >
        <div
          class="lucid-Selection lucid-Selection-is-small lucid-Selection-container lucid-Selection-has-background lucid-Selection-is-bold lucid-SearchableMultiSelect-Selection-section"
        >
          <div
            class="lucid-Selection-content"
          >
            <div
              class="lucid-Selection-label-container"
            >
              <span
                class="lucid-Selection-label lucid-Selection-label-is-small"
              >
                Selected
              </span>
              <svg
                class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M.5.5l15 15m0-15l-15 15"
                />
              </svg>
            </div>
            <div
              class="lucid-Selection-children-container"
            >
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-warning"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-WarningIcon lucid-Selection-Icon lucid-Selection-Icon-is-small"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    class="lucid-WarningIcon-background"
                    d="M.5 15h15L8 .5z"
                  />
                  <path
                    class="lucid-WarningIcon-mark"
                    d="M7.99 5v4"
                  />
                  <circle
                    class="lucid-WarningIcon-mark"
                    cx="7.99"
                    cy="12"
                    r=".293"
                  />
                </svg>
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      Washington
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-success"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SuccessIcon lucid-Selection-Icon lucid-Selection-Icon-is-small"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    class="lucid-SuccessIcon-background"
                    cx="8"
                    cy="8"
                    r="7.5"
                  />
                  <path
                    class="lucid-SuccessIcon-check"
                    d="M4.5 8L7 10.5 11.5 6"
                  />
                </svg>
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      Oregon
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-danger"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-MinusCircleIcon lucid-Selection-Icon lucid-Selection-Icon-is-small"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <circle
                    class="lucid-MinusCircleIcon-background"
                    cx="8"
                    cy="8"
                    r="7.5"
                  />
                  <path
                    class="lucid-MinusCircleIcon-dash"
                    d="M4.5 8h7"
                  />
                </svg>
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      California
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-container"
              >
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      Nevada
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h5>
      No remove all option
    </h5>
    <div
      class="lucid-SearchableMultiSelect"
      default=""
      initialstate="[object Object]"
    >
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
            tabindex="0"
          >
            <div
              class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small"
            >
              <input
                autocomplete="off"
                class="lucid-TextField lucid-TextField-is-single-line"
                rows="5"
                type="text"
                value=""
              />
              <div
                class="lucid-SearchField-Icon-container"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                  height="12"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <circle
                    cx="6"
                    cy="6"
                    r="5.5"
                  />
                  <path
                    d="M15.5 15.5L9.876 9.876"
                  />
                </svg>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div
        class="lucid-SearchableMultiSelect-Selection-padding"
      >
        <div
          class="lucid-Selection lucid-Selection-is-small lucid-Selection-container lucid-Selection-has-background lucid-Selection-is-bold lucid-SearchableMultiSelect-Selection-section"
        >
          <div
            class="lucid-Selection-content"
          >
            <div
              class="lucid-Selection-label-container"
            >
              <span
                class="lucid-Selection-label lucid-Selection-label-is-small"
              >
                Selected
              </span>
            </div>
            <div
              class="lucid-Selection-children-container"
            >
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
              >
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      Washington
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
              >
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      Oregon
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
              <div
                class="lucid-Selection lucid-Selection-is-small lucid-Selection-default"
              >
                <div
                  class="lucid-Selection-content"
                >
                  <div
                    class="lucid-Selection-label-container"
                  >
                    <span
                      class="lucid-Selection-label lucid-Selection-label-is-small"
                    >
                      California
                    </span>
                    <svg
                      class="lucid-Icon lucid-Icon-color-primary lucid-Icon-is-clickable lucid-CloseIcon lucid-CloseIcon-is-clickable lucid-Selection-close-button lucid-Selection-close-button-is-small"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        d="M.5.5l15 15m0-15l-15 15"
                      />
                    </svg>
                  </div>
                  <div
                    class="lucid-Selection-children-container"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SearchableMultiSelect [common] example testing should match snapshot(s) for SelectAll 1`] = `
<section
  style="margin-bottom:300px"
>
  <div
    class="lucid-Resizer"
  >
    <div
      class="lucid-SearchableMultiSelect"
      default=""
    >
      <div
        class="lucid-DropMenu lucid-DropMenu-base lucid-SearchableMultiSelect-DropMenu lucid-SearchableMultiSelect-DropMenu-is-small"
      >
        <span
          class="lucid-ContextMenu"
        >
          <div
            class="lucid-DropMenu-Control"
            tabindex="0"
          >
            <div
              class="lucid-SearchField lucid-SearchableMultiSelect-search lucid-SearchableMultiSelect-search-is-small"
            >
              <input
                autocomplete="off"
                class="lucid-TextField lucid-TextField-is-single-line"
                rows="5"
                type="text"
                value=""
              />
              <div
                class="lucid-SearchField-Icon-container"
              >
                <svg
                  class="lucid-Icon lucid-Icon-color-primary lucid-SearchIcon lucid-SearchField-Icon"
                  height="12"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <circle
                    cx="6"
                    cy="6"
                    r="5.5"
                  />
                  <path
                    d="M15.5 15.5L9.876 9.876"
                  />
                </svg>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</section>
`;

exports[`SearchableMultiSelect custom formatting should render Option child function by passing in {searchText}, setting filterText on each option and using a custom optionFilter 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value="tion"
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          Select All
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.FixedOption>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption0"
      name="OptionA"
    >
      <CheckboxLabeled
        callbackId="0"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption1"
      name="OptionB"
    >
      <CheckboxLabeled
        callbackId="1"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption2"
      name="OptionC"
    >
      <CheckboxLabeled
        callbackId="2"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <Component
            searchText="tion"
          />
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableMultiSelect custom formatting should render Option.Selected in the SelectedItems area 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={true}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          Select All
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.FixedOption>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption0"
      name="OptionA"
    >
      <CheckboxLabeled
        callbackId="0"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option a
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption1"
      name="OptionB"
    >
      <CheckboxLabeled
        callbackId="1"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={true}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option b
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableMultiSelectOption2"
      name="OptionC"
    >
      <CheckboxLabeled
        callbackId="2"
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={false}
        isSelected={true}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "width": 100,
                }
              }
            >
              id
            </div>
            <div>
              option c
            </div>
          </div>
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.Option>
  </DropMenu>
  <div
    className="lucid-SearchableMultiSelect-Selection-padding"
  >
    <Selection
      className="lucid-SearchableMultiSelect-Selection-section"
      hasBackground={true}
      isBold={true}
      isRemovable={true}
      kind="container"
      onRemove={[Function]}
      responsiveMode="large"
    >
      <Selection.Label>
        Selected
      </Selection.Label>
      <Selection
        callbackId={1}
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="1"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        <Selection.Label>
          option b
        </Selection.Label>
      </Selection>
      <Selection
        callbackId={2}
        hasBackground={false}
        isBold={false}
        isRemovable={true}
        key="2"
        kind="default"
        onRemove={[Function]}
        responsiveMode="large"
      >
        <Selection.Label>
          option c
        </Selection.Label>
      </Selection>
    </Selection>
  </div>
</div>
`;

exports[`SearchableMultiSelect custom formatting should render OptionGroup.Selected in the SelectedItems area 1`] = `
<div
  className="lucid-SearchableMultiSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableMultiSelect-DropMenu"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableMultiSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.FixedOption
      className="lucid-SearchableMultiSelect-Option-select-all"
      isDisabled={false}
      isHidden={true}
      isWrapped={true}
      key="SearchableMultiSelectOption-select-all"
    >
      <CheckboxLabeled
        className="lucid-SearchableMultiSelect-CheckboxLabeled"
        isDisabled={false}
        isIndeterminate={true}
        isSelected={false}
        onSelect={[Function]}
      >
        <CheckboxLabeled.Label>
          Select All
        </CheckboxLabeled.Label>
      </CheckboxLabeled>
    </DropMenu.FixedOption>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableMultiSelectOptionGroup0"
    >
      Foo bar baz
      <SearchableMultiSelect.Option
        Selected="option a"
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        name="OptionA"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option a
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option
        Selected="option b"
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        name="OptionB"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option b
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <SearchableMultiSelect.Option
        Selected="option c"
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        name="OptionC"
      >
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "width": 100,
              }
            }
          >
            id
          </div>
          <div>
            option c
          </div>
        </div>
      </SearchableMultiSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption0"
        name="OptionA"
      >
        <CheckboxLabeled
          callbackId="0"
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option a
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption1"
        name="OptionB"
      >
        <CheckboxLabeled
          callbackId="1"
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={true}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option b
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableMultiSelectOption2"
        name="OptionC"
      >
        <CheckboxLabeled
          callbackId="2"
          className="lucid-SearchableMultiSelect-CheckboxLabeled"
          isDisabled={false}
          isIndeterminate={false}
          isSelected={true}
          onSelect={[Function]}
        >
          <CheckboxLabeled.Label>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <div
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                id
              </div>
              <div>
                option c
              </div>
            </div>
          </CheckboxLabeled.Label>
        </CheckboxLabeled>
      </DropMenu.Option>
    </DropMenu.OptionGroup>
  </DropMenu>
  <div
    className="lucid-SearchableMultiSelect-Selection-padding"
  >
    <Selection
      className="lucid-SearchableMultiSelect-Selection-section"
      hasBackground={true}
      isBold={true}
      isRemovable={true}
      kind="container"
      onRemove={[Function]}
      responsiveMode="large"
    >
      <Selection.Label>
        Selected
      </Selection.Label>
      <Selection
        className="lucid-SearchableMultiSelect-Selection-group"
        hasBackground={false}
        isBold={true}
        isRemovable={false}
        key="optionGroup-0"
        kind="container"
        onRemove={[Function]}
        responsiveMode="large"
      >
        <Selection.Label>
          Selected Foo
        </Selection.Label>
        <Selection
          callbackId={1}
          hasBackground={false}
          isBold={false}
          isRemovable={true}
          key="1"
          kind="default"
          onRemove={[Function]}
          responsiveMode="large"
        >
          <Selection.Label>
            option b
          </Selection.Label>
        </Selection>
        <Selection
          callbackId={2}
          hasBackground={false}
          isBold={false}
          isRemovable={true}
          key="2"
          kind="default"
          onRemove={[Function]}
          responsiveMode="large"
        >
          <Selection.Label>
            option c
          </Selection.Label>
        </Selection>
      </Selection>
    </Selection>
  </div>
</div>
`;
